# python-pro-dz-3

./: .gitignore  app.py  init_db.py  pyproject.toml  schema.sql
blueprints/: customer_blueprint.py  errors_blueprint.py  tracks_blueprint.py
templates/: all-tracks.html  customers.html  home.html  tracks.html
templates/errors/: 404.html  500.html
templates/extends/: base.html  header.html
